--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,24 @@ jobs:
       - name: Test
         run: ENVIRONMENT=cicd make test
 
+
+  push:
+    name: Push To GCR Registry
+    needs:
+      - lint
+      - test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Push Image to GCR
+        uses: RafikFarhad/push-to-gcr-github-action@v4.1
+        with:
+          gcloud_service_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
+          registry: gcr.io
+          project_id: neurons-be-test
+          image_name: zssn
+          image_tag: latest
+          dockerfile: Dockerfile
+          context: .
